# claude-code-library

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TEST_SUMMARY.md
.claude/: CLAUDE.md
.github/workflows/: build-examples.yml  ci.yml  maintenance.yml  release.yml
.serena/: project.yml
boilerplates/python-cli-boilerplate/: .gitignore  README.md  pyproject.toml
boilerplates/python-cli-boilerplate/.claude/docs/: HANDOFF.md  TODO.md
boilerplates/python-cli-boilerplate/src/{{PROJECT_NAME}}/: __init__.py  cli.py
boilerplates/python-cli-boilerplate/tests/: test_cli.py
boilerplates/webapp-boilerplate/: .env.example  README.md  package.json  tsconfig.json
boilerplates/webapp-boilerplate/.claude/: CLAUDE.md
boilerplates/webapp-boilerplate/.claude/docs/: HANDOFF.md  TODO.md
boilerplates/webapp-boilerplate/prisma/: schema.prisma
boilerplates/webapp-boilerplate/src/: auth.ts  middleware.ts
boilerplates/webapp-boilerplate/src/app/: layout.tsx  page.tsx
boilerplates/webapp-boilerplate/src/types/: next-auth.d.ts
boilerplates/website-boilerplate/: .gitignore  README.md  astro.config.mjs  package.json
boilerplates/website-boilerplate/.claude/: CLAUDE.md
boilerplates/website-boilerplate/.claude/docs/: TODO.md
boilerplates/website-boilerplate/src/components/: Footer.astro  Header.astro
boilerplates/website-boilerplate/src/pages/: index.astro
completions/: claude-lib-completion.bash  claude-lib-completion.zsh  install-completions.sh
docs/: DEVELOPMENT.md  LESSONS_LEARNED.md  QUICK_REFERENCE.md  TROUBLESHOOTING.md
examples/: README.md
examples/python-cli-example/: README.md  pyproject.toml
examples/python-cli-example/.claude/: CLAUDE.md
examples/python-cli-example/src/todocli/: __init__.py  __main__.py  cli.py  models.py  storage.py
examples/python-cli-example/tests/: conftest.py
examples/webapp-example/: .env.example  .gitignore  IMPLEMENTATION.md  README.md  next.config.ts  package.json
examples/webapp-example/prisma/: schema.prisma
examples/website-example/: README.md  package.json
hooks/: README.md  setup-hooks.sh  validate-changed-examples.sh
scripts/: anti-pattern-detector.sh  bug-hunter.sh  claude-lib  crisis-mode.sh  doc-sprint.sh  feature-workflow.sh  init-project.sh  metrics.sh  morning-setup.sh  validate-boilerplate.sh  validate-project-structure.sh  validate-structure.sh
tests/: README.md  test-boilerplate-integrity.sh  test-claude-lib-cli.sh  test-integration.sh  test-library-structure.sh  test-runner.sh
(+25 files in other folders)
